<resources>
    <string name="app_name">Catchy ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="or">--------------------------- or ---------------------------</string>
    <string name="instruction">Instruction</string>
    <string name="shoe_list">shoe list</string>
    <string name="welcome_title">Welcome Page</string>
    <string name="instruction_title">Instruction Page</string>
    <string name="instruction_content">Instruction Content</string>
    <string name="welcome_content">Welcome Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_descr">Shoe Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>
